--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,31 @@
-# theme: jekyll-theme-minimal
-# title: Osama's homepage
-# description: Bookmark this to keep an eye on my project updates
-
 # _config.yml
 
-# Site settings
 title: Osama Sarfraz — Game Developer & Designer
 description: Portfolio of Osama Sarfraz — Senior Game Developer and Game Designer.
-baseurl: "" # the subpath of your site, e.g. /portfolio
-url: "https://osamasarfraz.github.io" # your GitHub Pages URL
-theme: minima
+baseurl: ""
+url: "https://osamasarfraz.github.io"
+
+# Remove theme to use custom layout
+# theme: minima
 
 # Build settings
 markdown: kramdown
 permalink: pretty
-plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
 
-# Social links
-social_links:
-  email: osamasarfrazsheikh@gmail.com
-  github: osamasarfraz
-  itch: osamasarfraz
-  youtube: osamasarfraz
+# Disable default Minima layouts
+defaults:
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "default"
 
-
-
-  
+# Exclude Minima files
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
